--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -29,4 +29,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: your-dockerhub-username/final-proj-app:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/final-proj-app:latest
