--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,13 +21,10 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1  # שנה לאזור שבו יצרת את ה-EC2
+          aws-region: us-east-1 # שנה לאזור שבו יצרת את ה-EC2
 
       - name: Upload to S3
         run: aws s3 cp deploy.zip s3://codedeploy-final-proj/deploy.zip
 
       - name: Deploy with CodeDeploy
-        run: aws deploy create-deployment \
-          --application-name final-proj-app \
-          --deployment-group-name final-proj-deployment \
-          --s3-location bucket=codedeploy-final-proj,key=deploy.zip,bundleType=zip
+        run: aws deploy create-deployment --application-name final-proj-app --deployment-group-name final-proj-deployment --s3-location bucket=codedeploy
