--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1 # שנה לאזור שבו יצרת את ה-EC2
+          aws-region: eu-north-1 # שנה לאזור שבו יצרת את ה-EC2
 
       - name: Upload to S3
         run: aws s3 cp deploy.zip s3://codedeploy-final-proj/deploy.zip
