--- a/appspec.yml
+++ b/appspec.yml
@@ -7,6 +7,6 @@ files:
 
 hooks:
   AfterInstall:
-    - location: scripts/deploy.sh
+    - location: ./deploy.sh
       timeout: 300
       runas: ec2-user
